# risiUpgrade

./: .gitignore  Cargo.toml  build.rs  risiUpgrade.cmb  risiUpgrade.ui
data/: io.risi.upgrade.desktop  io.risi.upgrade.gresources.xml  io.risi.upgrade.gschema.xml  upgrade.sh  upgrader.ui  welcome.ui  window.ui
src/: application.rs  config.rs  main.rs  window.rs
src/widgets/: mod.rs  upgrader.rs  welcome.rs
