[package]
name = "risi_upgrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.2", package = "gtk4" }
adw = { version = "0.2.1", package = "libadwaita" }
subprocess = "0.2.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
once_cell = "1.16.0"
