[package]
name = "risi_upgrade"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.5.2", package = "gtk4", features = ["v4_8"] }
adw = { version = "0.2.1", package = "libadwaita", features = [ "v1_2"] }
subprocess = "0.2.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
once_cell = "1.16.0"
